[gd_scene load_steps=66 format=3 uid="uid://c27fe3qnrj4ms"]

[ext_resource type="Script" uid="uid://cq25r8g6qlw17" path="res://resourses/entity/player/base/code/player.gd" id="1_8m1ne"]
[ext_resource type="PackedScene" uid="uid://cn78231br5yqe" path="res://resourses/entity/granade/code/boom.tscn" id="2_ny14h"]
[ext_resource type="SpriteFrames" uid="uid://bq2cacsi7h0bx" path="res://resourses/entity/player/base/code/player.tres" id="3_pgbbb"]
[ext_resource type="Texture2D" uid="uid://cc3t5joeasu6k" path="res://resourses/entity/player/base/texture/cat/land_effect.png" id="5_k71g3"]
[ext_resource type="SpriteFrames" uid="uid://bguq4n7gblp8e" path="res://resourses/entity/TV/code/tv.tres" id="8_331ug"]
[ext_resource type="Texture2D" uid="uid://cykqp8ka6tq30" path="res://resourses/entity/player/mobile_controller/texture/button_action.png" id="11_o4fn0"]
[ext_resource type="Texture2D" uid="uid://dtg36ugusxdbd" path="res://resourses/entity/player/mobile_controller/texture/button_action_pressed.png" id="12_lifl0"]
[ext_resource type="Texture2D" uid="uid://chqhvfn62ay7k" path="res://resourses/entity/player/mobile_controller/texture/button_arrow.png" id="13_krayp"]
[ext_resource type="Texture2D" uid="uid://csgdq40lwye06" path="res://resourses/entity/player/mobile_controller/texture/button_arrow_pressed.png" id="14_jxutx"]
[ext_resource type="Texture2D" uid="uid://crgl7ytdeb2el" path="res://resourses/entity/player/mobile_controller/texture/button_salt.png" id="15_dj4mu"]
[ext_resource type="Texture2D" uid="uid://e76emg6k28uw" path="res://resourses/entity/player/mobile_controller/texture/button_salt_pressed.png" id="16_bfcbp"]
[ext_resource type="Texture2D" uid="uid://bwup5s4baqp0m" path="res://resourses/entity/player/mobile_controller/texture/hit.png" id="17_hn0t7"]
[ext_resource type="PackedScene" uid="uid://dfo3gpmlnp5h6" path="res://resourses/entity/bullet/code/bullet.tscn" id="30_ny14h"]
[ext_resource type="Texture2D" uid="uid://crhquqw084nub" path="res://resourses/entity/player/mobile_controller/texture/button_pause.png" id="32_galrp"]
[ext_resource type="AudioStream" uid="uid://bh8nsyb3yrfic" path="res://resourses/entity/player/blaster/sound/blaster.mp3" id="32_ny14h"]
[ext_resource type="Texture2D" uid="uid://xfwt41mclny3" path="res://resourses/entity/player/mobile_controller/texture/button_pause_pressed.png" id="33_55vbn"]
[ext_resource type="AudioStream" uid="uid://b6gd3p2ehsg8b" path="res://resourses/entity/player/base/sound/jump.mp3" id="67_v58pc"]
[ext_resource type="AudioStream" uid="uid://c3x81i1us0cwj" path="res://resourses/entity/player/base/sound/land.mp3" id="68_qmmh8"]
[ext_resource type="Script" uid="uid://cr8jo7ea12fkm" path="res://resourses/entity/player/blaster/code/blaster.gd" id="69_fr3kn"]
[ext_resource type="Texture2D" uid="uid://bta6i87i6tk84" path="res://resourses/entity/player/mobile_controller/texture/hit_pressed.png" id="71_w2dpe"]
[ext_resource type="Texture2D" uid="uid://b3loc2bqtjq2r" path="res://resourses/entity/player/blaster/texture/recharge.png" id="73_vihgm"]
[ext_resource type="Texture2D" uid="uid://cjj6qnlbjeayw" path="res://resourses/entity/player/mobile_controller/texture/button_one_pressed.png" id="74_276gg"]
[ext_resource type="Texture2D" uid="uid://ccr61g1qaerdl" path="res://resourses/entity/player/mobile_controller/texture/button_one.png" id="75_6tot8"]
[ext_resource type="Texture2D" uid="uid://drqv4x3172q61" path="res://resourses/entity/player/mobile_controller/texture/button_two_pressed.png" id="76_7ua45"]
[ext_resource type="Texture2D" uid="uid://bideyn123tp8h" path="res://resourses/entity/player/mobile_controller/texture/button_two.png" id="77_tucw7"]
[ext_resource type="Texture2D" uid="uid://doyfyso10ptm6" path="res://resourses/entity/player/mobile_controller/texture/grande_buttom.png" id="78_y4fi5"]
[ext_resource type="Texture2D" uid="uid://bef43llfar5bv" path="res://resourses/entity/player/mobile_controller/texture/granade_buttom_pressed.png" id="79_ukxdx"]
[ext_resource type="Script" uid="uid://ddpebavxlo2i7" path="res://joystick/joystick.gd" id="81_1mwr7"]
[ext_resource type="Texture2D" uid="uid://dlx03pgoywkfw" path="res://joystick/texture/5f394193cd6b2173f7a82981.png" id="81_nc8c3"]
[ext_resource type="Script" uid="uid://cqvwiesvk3vct" path="res://joystick/jousuck/addons/virtual_joystick/virtual_joystick.gd" id="82_qvknn"]
[ext_resource type="Texture2D" uid="uid://bm30au8mjfc2f" path="res://joystick/jousuck/addons/virtual_joystick/textures/joystick_base_outline.png" id="83_xsgbm"]
[ext_resource type="Texture2D" uid="uid://dt13r06u87fib" path="res://joystick/jousuck/addons/virtual_joystick/textures/joystick_tip_arrows.png" id="84_djclt"]
[ext_resource type="Script" uid="uid://bx8idcymi81ep" path="res://resourses/entity/player/pause/code/pause.gd" id="89_iraf3"]
[ext_resource type="Texture2D" uid="uid://b2duhhcvfouem" path="res://resourses/entity/player/base/texture/heart/heart.png" id="90_87nqs"]
[ext_resource type="FontFile" uid="uid://bmd5csjp18eov" path="res://resourses/shared_resources/fonts/upheaval-pro/Upheaval/UpheavalPro.ttf" id="91_d1y0c"]
[ext_resource type="Script" uid="uid://dktx14jgtok82" path="res://resourses/entity/player/FPS/label_fps.gd" id="95_d17l8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lo2je"]
size = Vector2(49, 45.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_pew11"]
atlas = ExtResource("5_k71g3")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2g7f"]
atlas = ExtResource("5_k71g3")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_y56v5"]
atlas = ExtResource("5_k71g3")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4fn0"]
atlas = ExtResource("5_k71g3")
region = Rect2(288, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_28d1b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pew11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2g7f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y56v5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4fn0")
}],
"loop": false,
"name": &"land",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"xex",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_awmoh"]
radius = 106.042

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cebvf"]
size = Vector2(100, 100)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dpgy2"]
radius = 11.0
height = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bn4h3"]
size = Vector2(9, 5.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_4i85s"]
atlas = ExtResource("73_vihgm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcrkf"]
atlas = ExtResource("73_vihgm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p54a3"]
atlas = ExtResource("73_vihgm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eg045"]
atlas = ExtResource("73_vihgm")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7x6n7"]
atlas = ExtResource("73_vihgm")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oc0w5"]
atlas = ExtResource("73_vihgm")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lm022"]
atlas = ExtResource("73_vihgm")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqmsi"]
atlas = ExtResource("73_vihgm")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8aaj"]
atlas = ExtResource("73_vihgm")
region = Rect2(32, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2acp6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4i85s")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcrkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p54a3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eg045")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x6n7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oc0w5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lm022")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqmsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8aaj")
}],
"loop": false,
"name": &"recharge",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rljtb"]
size = Vector2(100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwvdg"]
atlas = ExtResource("90_87nqs")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwtlh"]
atlas = ExtResource("90_87nqs")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1c24f"]
atlas = ExtResource("90_87nqs")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6vv36"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwvdg")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwtlh")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1c24f")
}],
"loop": false,
"name": &"hp",
"speed": 1.0
}]

[sub_resource type="GDScript" id="GDScript_sk34d"]
script/source = "extends AnimatedSprite2D
@onready var anim = self
@onready var player = $\"../..\"
@onready var label = $\"../Label\"

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _physics_process(delta: float) -> void:
	#лучший скрипт всего человечества(хуйня)
	label.text = \"salt:\" + str(player.salt)
	anim.play(\"hp\")
	if player.health == 2:
		anim.play(\"1\")
	elif player.health == 1:
		anim.play(\"2\")
	elif player.health == 0:
		anim.play(\"3\")
"

[sub_resource type="LabelSettings" id="LabelSettings_v3gx4"]
font = ExtResource("91_d1y0c")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_uf1d1"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_evup4"]
polygon = PackedVector2Array(23, 70, 62, 70, 62, 68, 23, 68)

[node name="player" type="CharacterBody2D"]
show_behind_parent = true
top_level = true
script = ExtResource("1_8m1ne")
granade = ExtResource("2_ny14h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(43, 53.75)
shape = SubResource("RectangleShape2D_lo2je")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CollisionShape2D"]
position = Vector2(-5, -25)
sprite_frames = ExtResource("3_pgbbb")
animation = &"transition"
autoplay = "hidel"

[node name="Camera2D" type="Camera2D" parent="CollisionShape2D"]
position = Vector2(-43.5, -175.5)
scale = Vector2(22.798, 0.913744)
process_callback = 0
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="recharge" type="RichTextLabel" parent="CollisionShape2D"]
offset_left = -56.5
offset_top = -71.5
offset_right = 69.5
offset_bottom = -36.5
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
bbcode_enabled = true

[node name="TV" type="AnimatedSprite2D" parent="CollisionShape2D"]
visible = false
position = Vector2(-5, -24.75)
sprite_frames = ExtResource("8_331ug")
animation = &"transition"
autoplay = "hidel"

[node name="effect" type="AnimatedSprite2D" parent="CollisionShape2D"]
position = Vector2(-5, -3.75)
sprite_frames = SubResource("SpriteFrames_28d1b")
animation = &"land"
autoplay = "xex"

[node name="mobile controller" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="mobile controller"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -269.0
offset_top = -322.0
offset_right = 3.0
offset_bottom = 324.0
grow_horizontal = 0
grow_vertical = 2

[node name="joystick" type="Area2D" parent="mobile controller/MarginContainer"]
visible = false
position = Vector2(98, 385)
scale = Vector2(0.639998, 0.64)
script = ExtResource("81_1mwr7")

[node name="big" type="Sprite2D" parent="mobile controller/MarginContainer/joystick"]
position = Vector2(2, 2)
scale = Vector2(0.5, 0.5)
texture = ExtResource("81_nc8c3")

[node name="small" type="Sprite2D" parent="mobile controller/MarginContainer/joystick/big"]
scale = Vector2(0.288, 0.296)
texture = ExtResource("81_nc8c3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="mobile controller/MarginContainer/joystick"]
position = Vector2(1, 2)
shape = SubResource("CircleShape2D_awmoh")

[node name="action" type="TouchScreenButton" parent="mobile controller/MarginContainer"]
position = Vector2(184, 358)
scale = Vector2(0.749132, 0.717117)
texture_normal = ExtResource("11_o4fn0")
texture_pressed = ExtResource("12_lifl0")
shape = SubResource("RectangleShape2D_cebvf")
action = "ui_action_button"

[node name="jump" type="TouchScreenButton" parent="mobile controller/MarginContainer"]
position = Vector2(86, 601)
rotation = -1.5708
scale = Vector2(1.31367, 1.25753)
texture_normal = ExtResource("13_krayp")
texture_pressed = ExtResource("14_jxutx")
shape = SubResource("RectangleShape2D_cebvf")
action = "ui_accept"

[node name="MarginContainer2" type="MarginContainer" parent="mobile controller"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -320.0
offset_right = 792.0
offset_bottom = 320.0
grow_vertical = 2

[node name="right" type="TouchScreenButton" parent="mobile controller/MarginContainer2"]
position = Vector2(206, 487)
scale = Vector2(1.3073, 1.25143)
texture_normal = ExtResource("13_krayp")
texture_pressed = ExtResource("14_jxutx")
shape = SubResource("RectangleShape2D_cebvf")
action = "ui_right_player"

[node name="left" type="TouchScreenButton" parent="mobile controller/MarginContainer2"]
position = Vector2(174.645, 605)
rotation = -3.14159
scale = Vector2(1.3088, 1.26126)
texture_normal = ExtResource("13_krayp")
texture_pressed = ExtResource("14_jxutx")
shape = SubResource("RectangleShape2D_cebvf")
action = "ui_left_player"

[node name="eat_salt" type="TouchScreenButton" parent="mobile controller/MarginContainer2"]
position = Vector2(18, 79)
scale = Vector2(0.749132, 0.717117)
texture_normal = ExtResource("15_dj4mu")
texture_pressed = ExtResource("16_bfcbp")
shape = SubResource("RectangleShape2D_cebvf")
action = "ui_focus_next"

[node name="hit" type="TouchScreenButton" parent="mobile controller/MarginContainer2"]
position = Vector2(19, 285)
scale = Vector2(0.749132, 0.717117)
texture_normal = ExtResource("17_hn0t7")
texture_pressed = ExtResource("71_w2dpe")
shape = SubResource("RectangleShape2D_cebvf")
action = "ui_hit_player0"

[node name="1" type="TouchScreenButton" parent="mobile controller/MarginContainer2"]
position = Vector2(559.291, 553.987)
scale = Vector2(0.677628, 0.713101)
texture_normal = ExtResource("74_276gg")
texture_pressed = ExtResource("75_6tot8")
shape = SubResource("RectangleShape2D_cebvf")
action = "1"

[node name="2" type="TouchScreenButton" parent="mobile controller/MarginContainer2"]
position = Vector2(643, 554.516)
scale = Vector2(0.67763, 0.718015)
texture_normal = ExtResource("76_7ua45")
texture_pressed = ExtResource("77_tucw7")
shape = SubResource("RectangleShape2D_cebvf")
action = "2"

[node name="boom" type="TouchScreenButton" parent="mobile controller/MarginContainer2"]
position = Vector2(19.0002, 201)
scale = Vector2(0.76702, 0.749894)
texture_normal = ExtResource("78_y4fi5")
texture_pressed = ExtResource("79_ukxdx")
shape = SubResource("RectangleShape2D_cebvf")
action = "boom"

[node name="Virtual Joystick" type="Control" parent="mobile controller"]
modulate = Color(1, 1, 1, 0.435294)
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -368.0
offset_top = -161.0
offset_right = -93.0
offset_bottom = 148.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("82_qvknn")

[node name="Base" type="TextureRect" parent="mobile controller/Virtual Joystick"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -135.5
offset_right = 137.0
offset_bottom = 137.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(100, 100)
mouse_force_pass_scroll_events = false
texture = ExtResource("83_xsgbm")
stretch_mode = 5

[node name="Tip" type="TextureRect" parent="mobile controller/Virtual Joystick/Base"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)
texture = ExtResource("84_djclt")
stretch_mode = 5

[node name="Timer_invulnerability" type="Timer" parent="."]
wait_time = 2.0

[node name="hit" type="Area2D" parent="."]
position = Vector2(76, 65)

[node name="hit" type="CollisionShape2D" parent="hit"]
shape = SubResource("CapsuleShape2D_dpgy2")

[node name="hit2" type="Area2D" parent="."]
position = Vector2(8, 65)
monitorable = false

[node name="hit2" type="CollisionShape2D" parent="hit2"]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_dpgy2")

[node name="blaster" type="Area2D" parent="."]
visible = false
position = Vector2(40, 50)
script = ExtResource("69_fr3kn")
bullet = ExtResource("30_ny14h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="blaster"]
position = Vector2(54, -2)
shape = SubResource("RectangleShape2D_bn4h3")

[node name="Marker2D" type="Marker2D" parent="blaster"]
position = Vector2(57, -2)

[node name="blaster" type="AnimatedSprite2D" parent="blaster"]
position = Vector2(16, 0.999999)
scale = Vector2(3.55023, 3.55023)
sprite_frames = SubResource("SpriteFrames_2acp6")
autoplay = "default"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="blaster"]
stream = ExtResource("32_ny14h")
volume_db = -10.0

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -197.0
offset_top = -319.0
offset_right = -7.0
offset_bottom = 31.0
grow_horizontal = 0
grow_vertical = 2

[node name="pause" type="TouchScreenButton" parent="CanvasLayer/MarginContainer"]
process_mode = 3
position = Vector2(187, 67)
rotation = -3.14159
scale = Vector2(0.679915, 0.650859)
texture_normal = ExtResource("32_galrp")
texture_pressed = ExtResource("33_55vbn")
shape = SubResource("RectangleShape2D_rljtb")
action = "ui_cancel"

[node name="pause" type="Control" parent="CanvasLayer"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 6.0
offset_top = -22.0
offset_right = 6.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("89_iraf3")

[node name="Panel" type="Panel" parent="CanvasLayer/pause"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.0
offset_top = -184.0
offset_right = 153.0
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/pause/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -148.0
offset_right = 115.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2

[node name="resume" type="Button" parent="CanvasLayer/pause/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("91_d1y0c")
text = "вернуться"

[node name="settings" type="Button" parent="CanvasLayer/pause/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("91_d1y0c")
text = "настройки"

[node name="quit" type="Button" parent="CanvasLayer/pause/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("91_d1y0c")
text = "выход в главное меню
"

[node name="Label" type="Label" parent="CanvasLayer/pause/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -108.0
offset_top = -22.0
offset_right = 108.0
offset_bottom = 55.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("91_d1y0c")
theme_override_font_sizes/font_size = 25
text = "           пауза"
vertical_alignment = 1

[node name="setting" type="Control" parent="CanvasLayer"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1151.0
offset_bottom = 648.0

[node name="Panel" type="Panel" parent="CanvasLayer/setting"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 144.0
offset_top = 95.0
offset_right = 1006.0
offset_bottom = 579.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/setting/Panel"]
layout_mode = 0
offset_left = 87.0
offset_top = 40.0
offset_right = 781.0
offset_bottom = 444.0

[node name="controll" type="Button" parent="CanvasLayer/setting/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("91_d1y0c")
action_mode = 0
text = "показать управление"

[node name="full screen" type="Button" parent="CanvasLayer/setting/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("91_d1y0c")
action_mode = 0
text = "полный экран"

[node name="light" type="Button" parent="CanvasLayer/setting/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("91_d1y0c")
action_mode = 0
text = "включить / выключить освещение"

[node name="quit_setting" type="Button" parent="CanvasLayer/setting/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("91_d1y0c")
action_mode = 0
text = "выйти"

[node name="heal" type="AnimatedSprite2D" parent="CanvasLayer"]
position = Vector2(50, 45)
scale = Vector2(2.54687, 2.70944)
sprite_frames = SubResource("SpriteFrames_6vv36")
animation = &"hp"
autoplay = "hp"
script = SubResource("GDScript_sk34d")

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 94.0
offset_top = 39.0
offset_right = 251.0
offset_bottom = 73.0
theme_override_font_sizes/font_size = 25
text = "salt :"
label_settings = SubResource("LabelSettings_v3gx4")

[node name="fps" type="Label" parent="CanvasLayer"]
offset_left = 94.0
offset_top = 61.0
offset_right = 176.0
offset_bottom = 121.0
label_settings = SubResource("LabelSettings_uf1d1")
script = ExtResource("95_d17l8")

[node name="music" type="Node" parent="."]

[node name="jump" type="AudioStreamPlayer" parent="music"]
stream = ExtResource("67_v58pc")

[node name="land" type="AudioStreamPlayer" parent="music"]
stream = ExtResource("68_qmmh8")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2(-6, 7)
occluder = SubResource("OccluderPolygon2D_evup4")

[connection signal="timeout" from="Timer_invulnerability" to="." method="_on_timer_invulnerability_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="CanvasLayer/pause/Panel/VBoxContainer/resume" to="CanvasLayer/pause" method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/pause/Panel/VBoxContainer/settings" to="CanvasLayer/pause" method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/pause/Panel/VBoxContainer/quit" to="CanvasLayer/pause" method="_on_quit_pressed"]
[connection signal="pressed" from="CanvasLayer/setting/Panel/VBoxContainer/controll" to="CanvasLayer/pause" method="_on_controll_pressed"]
[connection signal="pressed" from="CanvasLayer/setting/Panel/VBoxContainer/full screen" to="CanvasLayer/pause" method="_on_full_screen_pressed"]
[connection signal="pressed" from="CanvasLayer/setting/Panel/VBoxContainer/light" to="." method="_on_light_pressed"]
[connection signal="pressed" from="CanvasLayer/setting/Panel/VBoxContainer/quit_setting" to="CanvasLayer/pause" method="_on_quit_setting_pressed"]
